index/index.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
    /*----- HEADER SECTIION -----*/
.d-flex {       /* Header */
  background-color: black;
  display: flex;
  flex-flow: row wrap;
  padding: 0.5em;
  color: white;
}

.left-nav, .right-nav {       /* Headers' both parts as a row direction with basis */
  display: flex;
  flex-flow: row wrap;
  flex-basis: 50%;
  flex-grow: 1;
}

.left-nav {       /* Headers' first part */
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
  align-items:center;
}

.store-logo {       /* Store Logo */
  width: 30px;
  margin-left: 5em;
}

.left-nav ul {       /* Headers' first part list */
  display: inline-flex;
  list-style-type: none;
  padding: 1em;
}

.left-nav ul li {
  padding: 0.5em;
  font-size: 1.2em;
}

.right-nav {        /* Headers' second part */
  justify-content: flex-end;
  align-items:flex-start;
}

.right-nav > ul:nth-child(1) {        /* Headers' second part first child-list */
  display: flex;
  list-style-type: none;
  margin: 0 5em;
}

.right-nav ul li {
  border: 2px solid rgb(83, 83, 83);
  border-radius: 20px;
  background-color: black;
  padding: 0.8em;
  margin: 0.1em;
  font-size: 1em;
}

.right-nav ul li:hover {
  background-color: #dfa63c25;
  cursor: pointer;
}

.right-nav a , .left-nav a {
  text-decoration: none;
  color: white;
}

.right-nav .language-menu {
  display: none;
  position: absolute;
  padding: 1rem;
  margin-top: 0.5em;
  margin-left: -2.5em;
  transition: all 0.5s ease;
  min-width: 180px;
  list-style-type: none;
  text-align: center;
}

.right-nav > ul li:hover > .language-menu{
  display: block;
}

/* Headers' second part second child-dropdown */
    /*----- HEADER SECTIION END -----*/
    /*----- MAIN SECTIION -----*/



/* ! ---------Section 4 properties--------  */

/* ! ------color for 4 container----- */
:root {
  --text: #677381;
  --link: white;
  --button-bg: #459e1a;
  --button-text: #00ff19;
  --button-text-hover: #bcf005;
  --section-background: black;
}

.container-4-flex {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: center;
  align-content: center;
  background-color: var(--section-background);
  padding-bottom: 1em;
  padding-top: 1em;
  font-family: Helvetica;
}

/* --- Item-1 div --- */

@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
  .item-1-top-h1,
  .item-1-top-p {
    text-align: center;
  }
}

.item-1-top {
  flex-grow: 2;
}

.item-1-top-h1 {
  margin-top: 0.5em;
}

.item-1-top-p,
.item-2-bottom-p {
  margin-top: 1em;
}

.item-1-top,
.item-2-bottom-p {
  color: var(--text);
}

/* --- Item-2 div --- */

.item-2-bottom {
  flex-grow: 2;
  text-align: center;
}

.item-2-bottom button {
  margin-top: 1em;
  padding-left: 1.5em;
  padding-right: 1.5em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

.item-2-bottom-p a {
  color: var(--link);
}

.log-in-btn {
  background-color: var(--button-bg);
  color: var(--button-text);
  border: none;
  margin: 2px;
  padding: 5px;
  text-decoration: none;
}

.log-in-btn:hover {
  background-color: var(--button-text-hover);
  color: var(--link);
}

.item-2-bottom-p a {
  text-decoration: none;
}


/*----- FOOTER -----*/

.mainFooter{
  background-color: rgb(99, 98, 98);
  height: 230px;
}
.FAQ{
  background-color: lightgray;
  margin: 0 250px;
  padding-bottom: 3px;
}
.FAQ p{
padding-left: 10px;
font-weight: bold;
}

h1{
  background-color: rgb(177, 173, 173);
  text-align: center;
  font-size: 24px;
}
a {
  color: black;
}
a:link {
  text-decoration: none;
}

img {
  border: 3px solid #ddd;
  border-radius: 4px;
  width: 60px;
  border-radius: 50%;
  margin-left: 30px;
}
.logo-end{
  padding-top: 50px;
  height: 100px;
}

.endFooter{
  text-align: center;
  margin-right: 200px;
  margin-left: 200px;
  font-size: 15px
}
.logo{
float: left;
padding-left: 150px;
padding-bottom: 50px;
}

